Removed src/components/index.ts

--- a/frontend/src/pages/faq.mdx
+++ b/frontend/src/pages/faq.mdx
@@ -1,4 +1,4 @@
-import { LayoutMDX } from '@/components';
+import { LayoutMDX } from '@/components/LayoutMDX';
 import { Accordion } from '@/components/common';
 import { LINKS } from '@/constants';
 
