--- a/frontend/src/pages/faq.mdx
+++ b/frontend/src/pages/faq.mdx
@@ -1,5 +1,5 @@
 import { LayoutMDX } from '@/components/LayoutMDX';
-import { Accordion } from '@/components/common';
+import { Accordion } from '@/components/common/Accordion';
 import { LINKS } from '@/constants';
 
 <LayoutMDX toc title="FAQ">
